test/errors/member_not_found.correct
error: member_not_found.li:3:3: member 'b' not found
│ x.b.c.d;
│ ~~~
│   ^
